--- a/camera/MultiCameraApplication/res/values/arrays.xml
+++ b/camera/MultiCameraApplication/res/values/arrays.xml
@@ -24,6 +24,86 @@
         <item>@string/pref_video_quality_small</item>
     </string-array>
 
+
+
+
+    <string-array name="pref_capture_list_entries_1">
+        <item>1920x1080</item>
+        <item>1280x720</item>
+        <item>640x480</item>
+    </string-array>
+
+    <string-array name="pref_capture_list_values_1">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="pref_video_list_entries_1">
+        <item>1080p</item>
+        <item>720p</item>
+        <item>480p</item>
+    </string-array>
+
+    <string-array name="pref_video_list_values_1" translatable="false">
+        <item>@string/pref_video_quality_large</item>
+        <item>@string/pref_video_quality_medium</item>
+        <item>@string/pref_video_quality_small</item>
+    </string-array>
+
+
+    <string-array name="pref_capture_list_entries_2">
+        <item>1920x1080</item>
+        <item>1280x720</item>
+        <item>640x480</item>
+    </string-array>
+
+    <string-array name="pref_capture_list_values_2">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="pref_video_list_entries_2">
+        <item>1080p</item>
+        <item>720p</item>
+        <item>480p</item>
+    </string-array>
+
+    <string-array name="pref_video_list_values_2" translatable="false">
+        <item>@string/pref_video_quality_large</item>
+        <item>@string/pref_video_quality_medium</item>
+        <item>@string/pref_video_quality_small</item>
+    </string-array>
+
+
+
+    <string-array name="pref_capture_list_entries_3">
+        <item>1920x1080</item>
+        <item>1280x720</item>
+        <item>640x480</item>
+    </string-array>
+
+    <string-array name="pref_capture_list_values_3">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
+    <string-array name="pref_video_list_entries_3">
+        <item>1080p</item>
+        <item>720p</item>
+        <item>480p</item>
+    </string-array>
+
+    <string-array name="pref_video_list_values_3" translatable="false">
+        <item>@string/pref_video_quality_large</item>
+        <item>@string/pref_video_quality_medium</item>
+        <item>@string/pref_video_quality_small</item>
+    </string-array>
+
+
+
     <string-array name="pref_multi_usb_cam_list_entries">
         <item>One</item>
         <item>Two</item>
